[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async-serialized-rate-limiter"
version = "0.2.1"
description = "A strict asyncio rate limiter with serialized execution and sliding-window guarantees"
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "sumitdhyani", email = "sumitdhyani1@gmail.com" }
]

keywords = [
    "asyncio",
    "rate-limiter",
    "rate limiting",
    "sliding window",
    "throttling"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

dependencies = []
